[package]
name = "umbrella-mls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Обёртка над openmls с Ed25519-only policy и отключёнными external operations для приватных групп."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
umbrella-crypto-primitives = { workspace = true }
umbrella-identity = { workspace = true }
# umbrella-pq — optional, активируется под feature `pq`. Single source of truth для PQ примитивов
# (ML-KEM-768 + X-Wing combiner draft-10 KAT). Никаких прямых импортов libcrux-* вне umbrella-pq.
# umbrella-pq — optional, activated under feature `pq`. Single source of truth for PQ primitives
# (ML-KEM-768 + X-Wing combiner draft-10 KAT). No direct libcrux-* imports outside umbrella-pq.
umbrella-pq = { workspace = true, optional = true }
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_traits = { workspace = true }
tls_codec = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
# HMAC-SHA256 для SPQR deniable authentication (max_ratchet модуль).
# HKDF-SHA256 берётся через umbrella-crypto-primitives (single source of truth).
# HMAC-SHA256 for SPQR deniable authentication (max_ratchet module).
# HKDF-SHA256 is consumed via umbrella-crypto-primitives (single source of truth).
hmac = { workspace = true }
sha2 = { workspace = true }
# Зависимости HPKE base mode RFC 9180 §5.1 для DHKEM(X-Wing) — только под feature `pq`.
# HPKE base mode RFC 9180 §5.1 dependencies for DHKEM(X-Wing) — only under feature `pq`.
hkdf = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }

[features]
# Hybrid Post-Quantum opt-in (v1.1.0 release, production design Решение 4): активирует UmbrellaXWingProvider
# для ciphersuite 0x004D (MLS_256_XWING_CHACHA20POLY1305_SHA256_Ed25519). Без феature
# 0x004D НЕ декларируется в KeyPackage capabilities (postулат 14: иначе провайдер
# panic'ает на HpkeKemType::XWingKemDraft6 через openmls_rust_crypto unimplemented!).
#
# Hybrid Post-Quantum opt-in (v1.1.0 release, production design Decision 4): activates UmbrellaXWingProvider
# for ciphersuite 0x004D (MLS_256_XWING_CHACHA20POLY1305_SHA256_Ed25519). Without the feature,
# 0x004D is NOT declared in KeyPackage capabilities (postulate 14: otherwise the provider
# would panic on HpkeKemType::XWingKemDraft6 via openmls_rust_crypto unimplemented!).
default = []
pq = [
    "dep:umbrella-pq",
    "umbrella-pq/ml-kem",
    "dep:hkdf",
    "dep:chacha20poly1305",
    "dep:rand_core",
]
# F-MLS-1 closure (PhD-B Pass 5 remediation 2026-05-18): gates the
# `UmbrellaXWingProvider::new_for_kat_tests_only()` test-rig constructor
# that wires a zero hedged witness (used by KAT vectors of
# draft-connolly-cfrg-xwing-kem-10 Appendix C). Production builds
# physically cannot reach this constructor because the `pub fn` is
# `#[cfg(any(test, feature = "test-utils"))]`-gated and disappears from
# the lib when the feature is off. The pre-fix `Default::default()` impl
# (silent zero-witness fallback) is removed entirely; only
# `with_hedged_witness(witness)` remains in production — compile-time
# enforcement of the hedged-encryption invariant.
#
# F-MLS-1 closure: gates `new_for_kat_tests_only()` test-rig constructor.
# Production builds physically cannot reach the zero-witness path.
test-utils = []

[dev-dependencies]
proptest = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
criterion = { workspace = true }

# Criterion микро-бенчмарки для max_ratchet режима (Task 7 carry-over из
# max-ratchet v3 spec 2026-05-20). Запуск: `cargo bench -p umbrella-mls
# --bench max_ratchet_benchmark`. Replaces "expected" числа из §5 spec
# реальными измерениями на конкретном железе.
# Criterion micro-benchmarks for the max_ratchet mode (Task 7 carry-over from the
# max-ratchet v3 spec 2026-05-20). Run with `cargo bench -p umbrella-mls
# --bench max_ratchet_benchmark`. Replaces "expected" numbers in spec §5 with real
# measurements on concrete hardware.
[[bench]]
name = "max_ratchet_benchmark"
harness = false
