[package]
name = "umbrella-pq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Hybrid post-quantum primitives (ML-KEM-768, ML-DSA-65, SLH-DSA-128f-simple, X-Wing). Feature-gated."

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Атомарные features per-алгоритм. Каждый явно тянет соответствующий backend.
# Atomic per-algorithm features. Each explicitly pulls its backend.
ml-kem  = ["dep:libcrux-ml-kem", "dep:libcrux-kem"]
ml-dsa  = ["dep:libcrux-ml-dsa"]
slh-dsa = ["dep:fips205"]
# Зонтичный — все три, типичный production scenario.
# Umbrella — all three, typical production scenario.
full = ["ml-kem", "ml-dsa", "slh-dsa"]

[dependencies]
zeroize = { workspace = true }
secrecy = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }

# Ed25519 нужен для hybrid signature (Ed25519 + ML-DSA-65 AND-mode).
# Ed25519 is needed for hybrid signature (Ed25519 + ML-DSA-65 AND-mode).
ed25519-dalek = { workspace = true }

# PQ backends — optional через feature gates. Pinned exact через "=X.Y.Z" в workspace.dependencies.
# PQ backends — optional via feature gates. Pinned exact via "=X.Y.Z" in workspace.dependencies.
libcrux-ml-kem = { workspace = true, optional = true }
libcrux-kem    = { workspace = true, optional = true }
libcrux-ml-dsa = { workspace = true, optional = true }
fips205        = { workspace = true, optional = true }

[dev-dependencies]
proptest    = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
umbrella-vectors = { workspace = true }
